[workspace]
members = [
    "crates/kernel_irq",
    "crates/kernel_task",
    "crates/kernel_schedule",
    "crates/kernel_net",
    "crates/network_utils",
    "crates/legacy_driver",
    "cargo-kbuild",
]
resolver = "2"

[package]
name = "cargo-test"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel_schedule = { path = "crates/kernel_schedule" }
kernel_task = { path = "crates/kernel_task" }
legacy_driver = { path = "crates/legacy_driver" }
kernel_net = { path = "crates/kernel_net", optional = true }

[features]
default = []
CONFIG_SMP = ["kernel_schedule/CONFIG_SMP", "kernel_task/CONFIG_SMP"]
CONFIG_PREEMPT = ["kernel_schedule/CONFIG_PREEMPT"]
CONFIG_NET = ["kernel_net", "kernel_net/CONFIG_NET"]
CONFIG_ASYNC = []
CONFIG_LOGGING = ["kernel_net", "kernel_net/CONFIG_LOGGING"]
