[workspace]
members = [
    "crates/kernel_irq",
    "crates/kernel_task",
    "crates/kernel_schedule",
    "crates/kernel_net",
    "crates/network_utils",
    "crates/legacy_driver",
    "crates/kbuild_config",
    "crates/demo_mixed_deps",
    "cargo-kbuild",
]
resolver = "2"

[package]
name = "cargo-test"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel_schedule = { path = "crates/kernel_schedule" }
kernel_task = { path = "crates/kernel_task" }
legacy_driver = { path = "crates/legacy_driver" }
kernel_net = { path = "crates/kernel_net", optional = true }
demo_mixed_deps = { path = "crates/demo_mixed_deps", optional = true }

[features]
default = []
# Only declare features that enable optional dependencies
NET = ["kernel_net", "demo_mixed_deps"]
